--- a/Week_8/.vscode/settings.json
+++ b/Week_8/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "algorithm": "cpp",
         "ostream": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "array": "cpp"
     }
 }
